<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/MarginHalf"
    android:layout_marginStart="@dimen/MarginHalf"
    android:layout_marginEnd="@dimen/MarginHalf"
    card_view:cardBackgroundColor="@color/BackgroundCardView"
    card_view:cardCornerRadius="6dp">

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:gravity="center"
      android:orientation="vertical">

    <TextView
        android:id="@+id/listitem_geofenceName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/MarginStandard"
        style="@style/TextView.Header"
        tools:text="Geofence Name"/>

    <View style="@style/DividerHorizontal"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/MarginStandard"
        android:orientation="vertical">

      <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:orientation="horizontal">

        <TextView
            android:layout_width="@dimen/WidthLabel"
            android:layout_height="wrap_content"
            style="@style/TextViewSmall"
            android:text="@string/LabelLatitude"/>

        <TextView
            android:id="@+id/listitem_geofenceLatitude"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/TextView"
            android:text="@string/LabelLatitude"/>

      </LinearLayout>

      <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:orientation="horizontal">

        <TextView
            android:layout_width="@dimen/WidthLabel"
            android:layout_height="wrap_content"
            style="@style/TextViewSmall"
            android:text="@string/LabelLongitude"/>

        <TextView
            android:id="@+id/listitem_geofenceLongitude"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/TextView"
            android:text="@string/LabelLongitude"/>

      </LinearLayout>

      <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:orientation="horizontal">

        <TextView
            android:layout_width="@dimen/WidthLabel"
            android:layout_height="wrap_content"
            style="@style/TextViewSmall"
            android:text="@string/LabelRadius"/>

        <TextView
            android:id="@+id/listitem_geofenceRadius"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/TextView"
            android:text="@string/LabelRadius"/>

      </LinearLayout>

    </LinearLayout>

    <View style="@style/DividerHorizontal"/>

    <Button
        android:id="@+id/listitem_deleteButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        style="@style/DeleteButton"
        android:background="@android:color/transparent"
        android:text="@string/ButtonDeleteGeofence"/>

  </LinearLayout>

</android.support.v7.widget.CardView>
